# fanout

./: README.md  fanout.cabal
app/: FanOut.hs
src/: Operation.hs  Server.hs
