name:                fanout
version:             0.1.0.0
synopsis:            A system for simulating fan-out of simultaneous requests
description:         A system for simulating fan-out of simultaneous requests
homepage:            https://github.com/dakrone/fanout
license:             Apache-2.0
license-file:        LICENSE
author:              Lee Hinman
maintainer:          lee@writequit.org
-- copyright:           2017 Author name here
-- category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  ghc-options:         -Wall
  hs-source-dirs:      src
  exposed-modules:     Server
                     , Operation
  build-depends:       base >= 4.7 && < 5
                     , containers
                     , stm
  default-language:    Haskell2010

executable fanout
  hs-source-dirs:      app
  main-is:             FanOut.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , fanout
                     , stm
  default-language:    Haskell2010

test-suite fanout-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , fanout
                     , stm
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/dakrone/fanout
